# goldmine_monorepo

./: .gitattributes  .gitignore  .gitmodules  BACKEND_TESTING.md  FRONTEND_TESTING.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test-components.sh  test-contexts.sh  test-hooks.sh  test-pages.sh
.data/postgres_data/: postmaster.pid
.data/postgres_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
.data/postgres_data/base/5/: 1247  1249  1259  16384  16385  16388  16389  16390  16391  16393  16394  16395  16396  16397  16398  16399  16400  16401  16402  16404  16405  16406  16407  16407_fsm  16408  16409  16410  16411  16411_fsm  16412  16413  16415  16415_fsm  16416  16417  16420  16421  16422  16423  16423_fsm  (+40 more)
.data/postgres_data/global/: 1260  pg_control  pg_internal.init
.data/postgres_data/pg_stat/: pgstat.stat
backend/: Dockerfile  README.md  pyproject.toml  run.sh
backend/app/: dependencies.py  main.py
backend/app/routers/: corpora.py  metrics.py  predictions.py  tool_proxy.py  tools.py
backend/app/services/: corpus_ingestion.py  database.py  tool_service.py
backend/tests/: conftest.py  test_conftest_fixtures.py  test_dependencies.py  test_main.py
backend/tests/test_routers/: test_corpora.py  test_metrics.py  test_predictions.py  test_tool_proxy.py  test_tools.py
backend/tests/test_services/: test_corpus_ingestion.py  test_database.py  test_tool_service.py
corpora/: README.md
corpora/gold_corpus/: corpus.py
corpora/gold_corpus_small/: corpus.py
corpora/tiny_corpus/: corpus.py
experiments/: README.md
experiments/hpo-agent/: README.md  pyproject.toml
experiments/hpo-agent/clean/: generate_embeddings.py  model_error_summary.py
experiments/hpo-agent/experiment/: evaluate_embeddings_experiment.py  generate_embeddings_experiment.py
experiments/qwen_rlvr/: pyproject.toml
experiments/qwen_rlvr/scripts/: inference_server.sh  setup.sh  train.sh
experiments/qwen_rlvr/src/: environment.py  train.py
frontend/: Dockerfile  Dockerfile.test  FRONTEND-TESTING.md  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  App_original.js  setupTests.js
frontend/src/components/: ActionButtons.css  ActionButtons.jsx  FileInput.css  FileInput.jsx  HpoTermList.jsx  MessageDisplay.jsx  MetricsDisplay.jsx  ModelActionOutput.css  ModelActionOutput.jsx  ModelOutput.css  ModelOutput.jsx  ModelSelector.css  ModelSelector.jsx  ModelStatusIndicator.jsx  Navigation.css  Navigation.jsx  PerformanceActionButtons.jsx  SelectionForm.jsx  TextInput.css  TextInput.jsx  common-styles.css  index.js
frontend/src/components/__tests__/: ActionButtons.test.jsx  FileInput.test.jsx  HpoTermList.test.jsx  MessageDisplay.test.jsx  MetricsDisplay.test.jsx  ModelActionOutput.test.jsx  ModelOutput.test.jsx  ModelSelector.test.jsx  ModelStatusIndicator.test.jsx  Navigation.test.jsx  SelectionForm.test.jsx  TextInput.test.jsx
frontend/src/contexts/: EvaluationContext.jsx  LoadingContext.jsx
frontend/src/contexts/__tests__/: EvaluationContext.test.jsx  LoadingContext.test.jsx
frontend/src/hooks/: index.js  useApiCall.js  useEvaluationAPI.js  useNavigation.js  usePerformanceAPI.js  useTools.js
frontend/src/hooks/__tests__/: useApiCall.test.js  useEvaluationAPI.integration.test.js  useEvaluationAPI.test.js  useNavigation.test.js  usePerformanceAPI.integration.test.js  usePerformanceAPI.test.js  useTools.test.js
frontend/src/pages/: AboutPage.css  AboutPage.jsx  EvaluationPage.css  EvaluationPage.jsx  InferencePage.css  InferencePage.jsx  PerformancePage.css  PerformancePage.jsx  index.js
frontend/src/pages/__tests__/: AboutPage.test.jsx  EvaluationPage.test.jsx  InferencePage.test.jsx  PerformancePage.test.jsx
frontend/src/utils/: apiUtils.js  hpoUtils.js
frontend/src/utils/__tests__/: apiUtils.test.js  hpoUtils.test.js
goldmine/: corpus_base.py  pyproject.toml  types.py
goldmine/tests/: conftest.py  test_corpus_base.py  test_toolkit_api.py  test_toolkit_interface.py  test_types.py
goldmine/toolkit/: api.py  interface.py
tools/: README.md  compose.yml
tools/example_model/: Dockerfile  app.py  pyproject.toml  tool.py
tools/fast_hpo_cr/: Dockerfile  app.py  pyproject.toml  tool.py
tools/fast_hpo_cr/index/: hp.index
tools/gpt2/: Dockerfile  app.py  pyproject.toml  tool.py
tools/hpo-agent/: Dockerfile  agent.py  app.py  pyproject.toml  tool.py
tools/hpo-agent/hpo/2024-02-08/: genes_to_phenotype.txt  hp.obo  phenotype.hpoa
tools/hpo-agent/hpo/2024-04-19/: genes_to_phenotype.txt  hp.obo  phenotype.hpoa
tools/hpo-agent/hpo_vector_db/: meta.json
tools/hpo-agent/hpo_vector_db/collection/hpo_2024-04-19/: storage.sqlite
tools/phenobert/: Dockerfile  app.py  pyproject.toml  tool.py
tools/phenogpt2/: Dockerfile  app.py  pyproject.toml  tool.py
tools/phenotagger/: Dockerfile  app.py  compat.py  pyproject.toml  tool.py
