[project]
name = "goldmine-monorepo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0"
]

[tool.uv.workspace]
members = [
    "backend",
    "goldmine"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
goldmine = { workspace = true }