[project]
name = "goldmine-monorepo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "goldmine",
    "goldmine-backend",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.workspace]
members = [
    "backend",
    "goldmine"
]

[tool.uv.sources]
goldmine = { workspace = true }
goldmine-backend = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-postgresql>=7.0.2",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.12.0",
]
