[project]
name = "goldmine-backend"
version = "0.1.0"
description = "Goldmine backend service"
dependencies = [
    "goldmine",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.14",
    "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0"
]

[tool.uv.sources]
goldmine = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
