[project]
name = "goldmine"
version = "0.1.0"
requires-python = ">=3.11.6"
dependencies = [
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.14",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "dkpro-cassis>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0"
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.ruff]
