[project]
name = "gpt2"
version = "0.1.0"
requires-python = "==3.11.6"

dependencies = [
    "torch==2.1.2+cpu",
    "transformers==4.38.2",
    "fastapi",
    "uvicorn[standard]",
    "protobuf",
    "sentencepiece",
    "goldmine",
    "numpy<2"
]

[tool.uv.sources]
goldmine = { path = "../../goldmine" }
