[project]
name = "hpo-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.28.0",
    "pyhpo>=4.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers==5.0.0",
    "transformers==4.53.3",
    "torch==2.7.1",
    "goldmine",
]

[tool.uv.sources]
goldmine = { path = "../../goldmine" }
